# wasm-game-of-life

./: Cargo.toml
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json
www/src/: fps.ts  main.ts
