[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["devj <power3xz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.60"
fixedbitset = "0.4.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
